# MBU_Koerselsgodtgoerelse_Skolekoersler_Queue_Uploader

./: README.md  pyproject.toml
.github/: dependabot.yml
robot_framework/: process.py
