[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 11.3.0",
    "mbu_dev_shared_components == 0.0.49",
    "pandas",
    "office365-rest-python-client"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8",
  "mbu_dev_shared_components>=0.0.49,<1.0.0",
  "office365-rest-python-client",
  "pandas"
]
