[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbu_koerselsgodtgoerelse_skolekoersler_queue_uploader"
version = "1.0.0"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 11.1.0",
    "mbu_dev_shared_components == 0.0.49",
    "pandas",
    "office365-rest-python-client"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8",
  "mbu_dev_shared_components>=0.0.49,<4.0.0",
  "office365-rest-python-client",
  "pandas"
]
